# kimi-core

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-30-kimi-core.md  2026-04-30-kimi-swarm.md
docs/superpowers/specs/: 2026-04-30-kimi-core-design.md  2026-04-30-kimi-swarm-design.md
kimi_core/: __init__.py  agent.py  cli.py  config.py  memory.py  meta_spawner.py  mirror.py  reflection.py  swarm.py  tool_router.py
kimi_core/llm/: base.py  ollama.py
kimi_core/tools/: __init__.py  fs.py  shell.py
tests/: test_agent.py  test_cli.py  test_config.py  test_memory.py  test_meta_spawner.py  test_mirror.py  test_ollama_provider.py  test_reflection.py  test_swarm.py  test_tool_router.py  test_tools.py
