[project]
name = "kimi-core"
version = "0.1.0"
description = "Self-hosted AI assistant CLI"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
kimi = "kimi_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
